modified:   ChangeLog 	modified:   NEWS.md 	modified:   REQUIRE 	modified:   deps/build.jl 	modified:   docs/.gitignore 	modified:   docs/ChangeLog 	modified:   docs/Makefile 	modified:   examples/.gitignore 	modified:   examples/charlm.jl 	modified:   examples/housing.jl 	modified:   examples/lenet.jl 	modified:   examples/linreg.jl 	modified:   examples/mnist.jl 	modified:   examples/optimizers.jl 	modified:   examples/runexamples.jl 	modified:   examples/vgg.jl 	modified:   src/Knet.jl 	modified:   src/broadcast.jl 	modified:   src/conv.jl 	modified:   src/cuda01.jl 	modified:   src/cuda1.jl 	modified:   src/cuda11.jl 	modified:   src/cuda12.jl 	modified:   src/cuda20.jl 	modified:   src/cuda21.jl 	modified:   src/distributions.jl 	modified:   src/gpu.jl 	modified:   src/karray.jl 	modified:   src/kptr.jl 	modified:   src/linalg.jl 	modified:   src/reduction.jl 	modified:   src/unary.jl 	modified:   src/update.jl 	modified:   test/runtests.jl
 Untracked files:
	README.rst
	docs/README.rst
	docs/backprop.rst
	docs/cnn.rst
	docs/conf.py
	docs/gen.rst
	docs/getcode.pl
	docs/images/
	docs/index.rst
	docs/install.rst
	docs/mlp.rst
	docs/opt.rst
	docs/requirements.txt
	docs/rl.rst
	docs/rnn.rst
	docs/softmax.rst
	docs/theme/
	examples/README.md
	src/cuda01gen.jl
	src/cuda01test.jl
	src/cuda10.jl
	src/cuda10gen.jl
	src/cuda10test.jl
	src/cuda11gen.jl
	src/cuda11test.jl
	src/cuda12gen.jl
	src/cuda12test.jl
	src/cuda1gen.jl
	src/cuda1test.jl
	src/cuda20gen.jl
	src/cuda20test.jl
	src/cuda21gen.jl
	src/cuda21test.jl
	src/cuda22.jl
	src/cuda22test.jl
	src/cuda44.jl
	src/gradcheck.jl
	test/autograd.jl
	test/cpu_cptests_rand.jl
	test/cpu_cptests_simple.jl
	test/cputests.jl
	test/cudatests.jl
	test/cusparse.jl
	test/gputests.jl
	test/indexing.jl
	test/profaf.jl
	test/profflat.pl
	test/profile_af.jl
	test/profile_kn.jl
	test/profmlp.jl
	test/proftree.pl
	test/update_tests.jl

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,423 +1,32 @@
-2017-03-28  Deniz Yuret  <dyuret@ku.edu.tr>
-
-	* examples/rnnlm.jl: Trying to replicate one of:
-	http://www.fit.vutbr.cz/research/groups/speech/publi/2010/mikolov_interspeech2010_IS100722.pdf
-	http://www.fit.vutbr.cz/~imikolov/rnnlm/asru_large_v4.pdf
-	https://arxiv.org/abs/1312.6026
-	https://arxiv.org/abs/1409.2329
-	https://arxiv.org/abs/1508.06615
-
-	(:epoch,28,:perp,103.928986f0,173.2658f0,157.65414f0) RNNLM.main("--seed 1 --epochs 30 --dropout 0.5 --hidden 200 --embed 200 --batch 100 --best foo.jld")
-	(:epoch,14,:perp,52.10398f0,140.70792f0,130.77716f0)  RNNLM.main("--seed 1 --epochs 30 --dropout 0.5 --hidden 650 --embed 650 --batch 100 --best foo650.jld")
-	(:epoch,27,:perp,75.37883f0,135.43819f0,127.377f0)    RNNLM.main("--seed 1 --epochs 30 --dropout 0.5 --hidden 200 --embed 200 --batch 100 --optim Adagrad()")
-	(:epoch,5,:perp,69.288506f0,184.24977f0,171.84555f0)  RNNLM.main("--seed 1 --epochs 30 --hidden 200 --embed 200 --batch 100 --optim Adagrad()")
-	(:epoch,30,:perp,113.68978f0,166.22272f0,154.77658f0) RNNLM.main("--seed 1 --epochs 30 --hidden 200 200 --embed 200 --batch 100 --dropout 0.5 --optim Adagrad()")
-	(:epoch,25,:perp,181.603f0,239.55917f0,225.10878f0)   RNNLM.main("--seed 1 --epochs 30 --hidden 200 200 --embed 200 --batch 100 --dropout 0.5 --optim Sgd(lr=1,gclip=5)")
-
-	Paper claims perp < 100. Potential reasons we don't get this:
-	x Dropout not working. significant drop when turned off.
-	- Difft way to measure (exclude eos etc)
-	- Adam bad, sgd/gclip good. (adagrad works better). Paper uses SGD(lr=1,gclip=5) halving lr if devperp does not go down by 1.
-	- Difft lstm type?
-	- Initialization different. [-0.05,0.05]
-	- Batchsize different = 20.
-	- Highway network.
-	- BPTT 35 time steps: charlm style not sentence bound?
-	- Number of layers = 2! Table 2 gives 2x300 for char model. 2x200 for word model?
-
-2017-03-19  Deniz Yuret  <dyuret@ku.edu.tr>
-
-	* DONE:
+2016-10-25  Deniz Yuret  <dyuret@ku.edu.tr>
 
 	* TODO8:
-	# recover kuparser.
-	# navigation: implement world represenation.
-	# apply new rnn ideas to doc, readme, tutorial, slides, ijulia.
-	# fix reduction kernels for large matrices (10K-100K rows start giving bad answers): enis looking
-	# Latest master julia6 failing on nightly; AutoGrad also fails.
-	# implement nce.
-	# try feeding rnnlm subset of embed matrix as weight.
-	# functional lstm interface defining multi-output grad2 function.
-	# Setup attobot for next release: https://github.com/attobot/attobot.
-	# prepare and submit julia4/5 benchmarks: find out why benchmarks are slower on julia5/6: https://github.com/JuliaLang/julia/issues/18135 ?
-	# Issue 89: reduced_dims -> reduced_indices in 0.5.1, stop using unexported functions from base. Other examples: to_indexes, dims2string, deepcopy_internal, LinearFast, show_backtrace, decolon (in AutoGrad).
-	# AutoGrad docs convert from comments to docstrings in core.jl and include in Knet manual. wip in newdocs branch.
-	# AutoGrad tests convert to the new test system.
-	# add some test for deconv vs conv, gclip.
-	# gpu switching back and forth does not seem to work. do we really need multiple handles for cublas, cudnn? do we need them for libknet8?
-	# AutoGrad: run all tests with KnetArrays
-	# AutoGrad: support for keys, values, next for dictionaries.
-	# add benchmarks with new dynamic frameworks: Yoav tweet, Volkan email. assigned to Ilker, Enis.
-	# docs todo: Julia tutorial. simplify examples. Baris Bozkurt's comments.
 	# docs todo: perceptron. kernel perceptron. svm. lenet and vgg in cnn section.
-	# mnist2d: implement/test sparse arrays
-	# time doing a single im2col instead of N for conv4
-	# replace T<: conditions in functions with generated code for each type
-	# 0.7: rename the 73 functions, cpu tests (add conv), v0.5 compat. check old todo list
-	# DL439: If one has access to numerical computation on complex numbers, then there isa very eﬃcient way to numerically estimate	the gradient by using complex numbersas input to the function (Squire and Trapp, 1998)
+	# charlm: add dropout, add adam, functional lstm interface defining multi-output grad2 function.
+	# charlm: try indexing op instead of sparse matmul.
+	# charlm: try lstm time concatenation.
 	# optimization:
 	## make BLK,THR dependent on the input size? may improve final sum which is only 10x100 in this example.
 	## extend benchmark tests to cover all combinations of 10,100,1000 dimensions.
 	## optimize reduction and broadcasting kernels.
 	## optimize logp / softmax.
-	## optimize conv4 / matmul - arrayfire? cudnn conv instead of matmul? cudnn conv algorithms? fft paper from https://arxiv.org/abs/1601.06815.
+	## optimize conv4 / matmul - arrayfire? cudnn conv instead of matmul? cudnn conv algorithms?
 	## try fusion: we can do layers in one kernel call: relu(wx+b).
 	## try streams or multiple gpus.
-	## for general arrays: broadcast, get/setindex, h/v/cat. Enis working on this.
-
-
-2017-03-17  Deniz Yuret  <dyuret@ku.edu.tr>
-
-	* DONE:
-	# charlm: Implement rnns using separate embedding vectors and a @primitive concat operation: fix charlm demo, implement efficient s2s demo, s2s with attention. Need to first solve minibatching. Is v/hcat efficient?  KnetArray implements only 2-arg version. AutoGrad calls cat, supports multiple args, grad uses uncat which uses getindex with an array of indices.  KnetArray probably does not support an array of indices.
-	# charlm: try indexing op instead of sparse matmul.
-	# charlm: try lstm time concatenation.
-	# charlm: add adam: sgd(3.5) works faster. short bptt in initial epochs works faster.
-	# Add dropout as a primitive. Need kernel.
-	# charlm: add dropout
-	# s2s profile.
-	# check julia4 and julia6 compat, find out why julia pkgs marks	knet as broken.
-	# fix intermittent test errors: https://github.com/JuliaLang/julia/pull/20736#issuecomment-283834724
-
-2017-03-15  Deniz Yuret  <dyuret@ku.edu.tr>
-
-	* profile: %41 forw (%20 logp), %44 back (%21 logp), %14 sum_outgrads
-	* flat: 2027 logp, 1761 sum, 1410 gemm, 1373 sum_outgrads
-
-          4115 ...et/.julia/v0.5/AutoGrad/src/core.jl:88; forward_pass(::Function, ::Tuple{Dict{Symbol,Any},Arr...
-           12   /Users/dyuret/knet/master/prof/s2s.jl:83; state = initstate(inputs[1], model[:state0]) # 14
-           92   /Users/dyuret/knet/master/prof/s2s.jl:86; input = lstm_input(model[:embed1], input) # 85
-           717  /Users/dyuret/knet/master/prof/s2s.jl:87; state = lstm(model[:encode], state, input) # 723
-           9    /Users/dyuret/knet/master/prof/s2s.jl:91; input = lstm_input(model[:embed2], EOS) # 3
-           692  /Users/dyuret/knet/master/prof/s2s.jl:95; state = lstm(model[:decode], state, input) # 702
-           80   /Users/dyuret/knet/master/prof/s2s.jl:100; input = lstm_input(model[:embed2],output) # 61
-           39   /Users/dyuret/knet/master/prof/s2s.jl:102; state = lstm(model[:decode], state, input) # 30
-           1    /Users/dyuret/knet/master/prof/s2s.jl:106; gold = vcat(outputs..., EOS) # 1
-           2473 /Users/dyuret/knet/master/prof/s2s.jl:107; sumlogp = lstm_output(model[:output], preds, gold) # 2441
-            43   /Users/dyuret/knet/master/prof/s2s.jl:114; pred1 = vcat(preds...) # 46
-            248  /Users/dyuret/knet/master/prof/s2s.jl:115; pred2 = pred1 * param[1] # 242
-            144  /Users/dyuret/knet/master/prof/s2s.jl:116; pred3 = pred2 .+ param[2] # 145
-            2037 /Users/dyuret/knet/master/prof/s2s.jl:117; sumlogp = logprob(gold, pred3) # 2006
-             2027 ...rs/dyuret/knet/master/prof/s2s.jl:135; o1 = logp(ypred,2)     # 1999
-               833 ...ret/.julia/v0.5/Knet/src/unary.jl:176; x1 = maximum(x,d...)
-               120 ...ret/.julia/v0.5/Knet/src/unary.jl:177; x2 = x .- x1
-               122 ...ret/.julia/v0.5/Knet/src/unary.jl:178; x3 = exp(x2)
-               827 ...ret/.julia/v0.5/Knet/src/unary.jl:179; x4 = sum(x3,d...)
-               1   ...ret/.julia/v0.5/Knet/src/unary.jl:180; x5 = log(x4)
-               123 ...ret/.julia/v0.5/Knet/src/unary.jl:181; x6 = x2 .- x5
-             6    ...rs/dyuret/knet/master/prof/s2s.jl:136; o2 = o1[index]         # 4
-             4    ...rs/dyuret/knet/master/prof/s2s.jl:137; o3 = sum(o2)           # 2
-
-          4409 ...et/.julia/v0.5/AutoGrad/src/core.jl:231; backward_pass(::AutoGrad.Rec{Dict{Symbol,Any}}, ::Aut...
-           932  ./<missing>:0; *(::Type{AutoGrad.Grad{2}}, ::Knet.KnetArray{Float32...
-           1    ./<missing>:0; +(::Type{AutoGrad.Grad{1}}, ::Knet.KnetArray{Float32...
-           410  ./<missing>:0; .*(::Type{AutoGrad.Grad{2}}, ::Knet.KnetArray{Float3...
-           148  ./<missing>:0; .+(::Type{AutoGrad.Grad{2}}, ::Knet.KnetArray{Float3...
-           21   ./<missing>:0; getindex(::Type{AutoGrad.Grad{1}}, ::Array{Any,1}, :...
-           2142 ./<missing>:0; logp(::Type{AutoGrad.Grad{1}}, ::Knet.KnetArray{Floa...
-            818  ...uret/.julia/v0.5/Knet/src/unary.jl:195; dx1 = sum(dy,d...)
-            120  ...uret/.julia/v0.5/Knet/src/unary.jl:196; dx2 = exp(y)
-            1038 ...uret/.julia/v0.5/Knet/src/unary.jl:197; dx3 = dx2 .* dx1
-            166  ...uret/.julia/v0.5/Knet/src/unary.jl:198; dx4 = dy - dx3
-           245  ./<missing>:0; lstm_input(::Type{AutoGrad.Grad{1}}, ::Knet.KnetArra...
-           143  ./<missing>:0; sigm(::Type{AutoGrad.Grad{1}}, ::Knet.KnetArray{Floa...
-           6    ./<missing>:0; sum(::Type{AutoGrad.Grad{1}}, ::Float32, ::Float32, ...
-           106  ./<missing>:0; tanh(::Type{AutoGrad.Grad{1}}, ::Knet.KnetArray{Floa...
-           10   ./base.jl:151; vector_any()
-           2    ...AutoGrad/src/base/abstractarray.jl:0; cat(::Type{AutoGrad.Grad{17}}, ::Knet.KnetArray{Floa...
-           85   ...AutoGrad/src/base/abstractarray.jl:85; cat(::Type{AutoGrad.Grad{11}}, ::Knet.KnetArray{Floa...
-
-          1373 ...et/.julia/v0.5/AutoGrad/src/core.jl:233; backward_pass(::AutoGrad.Rec{Dict{Symbol,Any}}, ::Aut...
-           360 ...lia/v0.5/AutoGrad/src/interfaces.jl:71; sum_outgrads(::Void, ::AutoGrad.UngetIndex)
-           569 ...lia/v0.5/AutoGrad/src/interfaces.jl:87; sum_outgrads(::Dict{Symbol,Any}, ::AutoGrad.UngetIndex)
-           3   ...lia/v0.5/AutoGrad/src/interfaces.jl:92; sum_outgrads(::Array{Any,1}, ::AutoGrad.UngetIndex)
-           77  ...uret/.julia/v0.5/Knet/src/karray.jl:905; sum_outgrads{T}(a::KnetArray{T},b::KnetArray{T})=(a+b)
-           346 ...uret/.julia/v0.5/Knet/src/karray.jl:908; c = sum_outgrads_karray(a, b.value, b.index...)
-
-2017-03-12  Deniz Yuret  <dyuret@ku.edu.tr>
-
-	* DONE:
-	# fix repeated index gradient bug.
-	# s2s: Add a generic s2s example to Knet/examples. Need to solve minibatching / concat first.
-	# docs: write rnn chapter. fix earlier chapters.
-
-
-2017-03-11  Deniz Yuret  <dyuret@ku.edu.tr>
-
-	* indexing: repeated indices are not handled properly by
-	ungetindex, they need to be summed in backward pass but setindex
-	just overwrites. Let's understand how Julia indexing works:
-
-	a[:,i]
-	522 ./abstractarray.jl:752; getindex(::Array{Float64,2}, ::Colon, ::Array{Int64,1})
-	?   ./multidimensional.jl:270; _getindex(::Base.LinearFast, ::Array{Float64,2},...
-	522 ./multidimensional.jl:291; _unsafe_getindex(::Base.LinearFast, ::Array{Float64,2},...
-        149 ./multidimensional.jl:296; macro expansion
-        373 ./multidimensional.jl:298; macro expansion
-        373 ./multidimensional.jl:340; _unsafe_getindex!
-        373 ./multidimensional.jl:348; macro expansion
-        6   ./cartesian.jl:62; macro expansion
-        367 ./cartesian.jl:64; macro expansion
-        45  ./cartesian.jl:62; macro expansion
-        7   ./multidimensional.jl:349; macro expansion
-        315 ./multidimensional.jl:350; macro expansion
-
-	_unsafe_getindex is a @generated function which uses @nexprs, @ncall, to_index.
-
-	http://docs.julialang.org/en/latest/manual/metaprogramming.html#Generated-functions-1
-
-	@generated functions return quoted expressions that get compiled
-	at runtime. Only the types of expressions can be accessed in their
-	body.
-
-	@ncall 3 func a
-	==> func(a_1, a_2, a_3)
-	@ncall 2 func a b i->c[i]
-	==> func(a, b, c[1], c[2])
-
-	@nexprs 4 i -> y[i] = A[i+j]
-	==> y[1]=A[1+j]; y[2]=A[2+j]...
-
-	to_index defined in operators.jl, converts to Array,Colon,Int
-	Numbers -> Int
-	Colon is kept
-	BitArray -> find(I) -> Vector{Int} # although there is a special _unsafe_getindex which skips using find
-	Other arrays are kept (int or cartesianindex)
-
-	index_shape(A,I_1,I_2,...) gives the destination shape
-
-	indices(b) => (Base.OneTo(10000),Base.OneTo(10000))
-	eachindex(b) => Base.OneTo(100000000)
-
-	Finally we call _unsafe_getindex!(dest,A,I_1,I_2,...) at multidimensional.jl:340
-	J = decolon(src,I_1,I_2,...) converts colons to explicit indices.
-
-	@nloops N itersym rangeexpr bodyexpr
-	@nloops N itersym rangeexpr preexpr bodyexpr
-	@nloops N itersym rangeexpr preexpr postexpr bodyexpr
-
-	# this indexes dest with linear, src with cartesian indices
-        D = eachindex(dest)
-        Ds = start(D)
-	for j_2 in J_2
-	  for j_1 in J_1
-	    d,Ds = next(D,Ds)
-	    dest[d] = getindex(src,j_1,j_2)
-	  end
-	end
-
-	We need to write an accumulating version of setindex! (addindex!) for ungetindex.
-	_setindex! for N-D indices L364
-	_setindex! for 1-D indices L368 uses _maybe_reshape(A)
-	_unsafe_setindex! is called
-	_unsafe_batchsetindex! is called with (A,_iterable(x),to_indexes(J...)...)  L420
-
-	Here is macroexpanded version for N=2:
-	X is iterated over. A is called with individual indices.
-	We just need to zero out A and add for AutoGrad.
-	We need to write a KnetArray specific version in Knet.
-
-quote  # none, line 2:
-    begin 
-        I_1 = I[1]
-        I_2 = I[2]
-    end # none, line 3:
-    idxlens = index_lengths(A,I_1,I_2) # none, line 4:
-    setindex_shape_check(X,idxlens[1],idxlens[2]) # none, line 5:
-    J = decolon(A,I_1,I_2) # none, line 6:
-    begin 
-        J_1 = J[1]
-        J_2 = J[2]
-    end # none, line 7:
-    Xs = start(X) # none, line 8:
-    begin 
-        $(Expr(:inbounds, true))
-        begin  # cartesian.jl, line 62:
-            for j_2 = J_2 # cartesian.jl, line 63:
-                nothing # cartesian.jl, line 64:
-                begin  # cartesian.jl, line 62:
-                    for j_1 = J_1 # cartesian.jl, line 63:
-                        nothing # cartesian.jl, line 64:
-                        begin  # none, line 9:
-                            (v,Xs) = next(X,Xs) # none, line 10:
-                            setindex!(A,v,j_1,j_2)
-                        end # cartesian.jl, line 65:
-                        nothing
-                    end
-                end # cartesian.jl, line 65:
-                nothing
-            end
-        end
-        $(Expr(:inbounds, :pop))
-    end # none, line 12:
-    A
-end
-
-
-2017-03-10  Deniz Yuret  <dyuret@ku.edu.tr>
-
-	* DONE:
-	# Added KnetArray indexing support for: Int, Colon, UnitRange, StepRange, CartesianIndex, Array{Int}, Array{Bool}, Array{CartesianIndex}. Multidimensional indexing incomplete.
-
-2017-03-03  Deniz Yuret  <dyuret@ku.edu.tr>
-
-	* DONE:
-	# Implement a decent hill climbing algorithm for hyperopt: do not repeat, have acceleration, independent step sizes, guarantee local minima, one dimension at a time, pick dimension/move using bandits or a smart queue. Wikipedia has good pseudocode. Bandits may work better.
-
-2017-03-01  Deniz Yuret  <dyuret@ku.edu.tr>
-
-	* DONE:
-	# Add gclip to update!.
-
-2017-02-26  Deniz Yuret  <dyuret@ku.edu.tr>
-
-	* DONE:
-	# Issue 88: better handling of difft elt types on data vs weights in update!
-
-2017-02-23  Deniz Yuret  <dyuret@ku.edu.tr>
-
-	* DONE:
-	# bug in AutoGrad: broadcast.jl: $f(x1::Rec,x2::AbstractArray)=$f(x1,x2.value)
-	# gradcheck fails on: bmax(x,y)=broadcast(max,x,y) or bmin(x,y)=((y.<x).*y+(x.<y).*x)
-	# grad of convert (AutoGrad issue), implemented in karray.jl, need to port.
-
-2017-02-22  Deniz Yuret  <dyuret@ku.edu.tr>
-
-	* DONE:
-	# automatically generate README.md from tutorial.md.
-	# make examples easier to load (turn off Pkg install for vgg etc, docs take too long)
-	## no easy way to do it without effecting source links.
-
-2017-02-19  Deniz Yuret  <dyuret@ku.edu.tr>
-
-	* DONE:
-	# use mocha for cpu conv/pool. wip.
-	# cpuconv todo:
-	# ok: need to get rid of mask in pool_back
-	# ok: reimplement conv4 in terms of im2col
-	# ok: need low level blas call with pointers
-	# ok: reimplement conv4x conv4w using col2im?
-	# ok: need separate cpu and gpu libraries: condition makefile on finding nvcc, also cond openmpi like mocha/dep
-
-2017-02-18  Deniz Yuret  <dyuret@ku.edu.tr>
-
-	* DONE:
-	# add tests for new update interface.
-
-2017-02-16  Deniz Yuret  <dyuret@ku.edu.tr>
-
-	* DONE:
-	# permutedims ambiguity in AutoGrad in Julia 0.4.
-	# docs imagesize: The ![]() syntax doesn't support image size. However, you should be able to use the @raw block to insert custom HTML with an <img> tag as follows:
-	```@raw html
-	<img src="..." height="..." width="...">
-	```
-	# add x=unpool(pool(x)) test,
-	# add davide fix to knet before release
-	# Contents does not show on README.md, @ref doesn't work etc. New README?
-	# fix unclear docs for optimization, tutorial example? better yet, impl improved update interface.
-
-2017-02-15  Deniz Yuret  <dyuret@ku.edu.tr>
-
-	* DONE:
-	# KnetArray ==, ===, isapprox etc. missing.
-	# copy! for KnetArray missing. (we have fill!, rand! etc. is copy! supported by AutoGrad? should refuse for Rec)
-	# deepcopy does not work for KnetArray
-	# override KnetArray and Array instead of cpu2gpu etc.
-	# add KnetArray{Float32}(3) type init like Array and deprecate the other.
-	# Make BaseTestNext conditional on julia version. If not possible, create header.jl in test/ and check version/pkg.
-
-2017-02-13  Deniz Yuret  <dyuret@ai-test.hpc.ku.edu.tr>
-
-	* DONE:
-
-	# Latest master failing on Julia 0.4 (convtest) and nightly distros.
-	# TonyKelman on Compat: If you use Compat in your tests, it needs to be in test/REQUIRE or REQUIRE.
-	# TonyKelman on removing nightly from travis: you can make this an allowed failure so it'll run but won't make your status red
-
-2017-02-12  Deniz Yuret  <dyuret@ai-test.hpc.ku.edu.tr>
-
-	* unit-test-TODO:
-	+ unary.jl: cpu=25s gpu=41s
-	+ broadcast.jl: cpu=19s gpu=34s
-	+ reduction.jl: cpu=18s gpu=28s (6 fail)
-	+ karray.jl: cpu=(fail) gpu=12s
-	+ linalg.jl: cpu=(fail) gpu=15s
-	+ update.jl: cpu=6.6s gpu=19s
-	+ kptr.jl: cpu=2.5s gpu=2.5s
-	+ gpu.jl: cpu=3s gpu=2.4s
-	+ distributions.jl: cpu=3s gpu=3s
-	+ conv.jl: cpu=(fail) gpu=13s (10 broken)
-	+ runtests.jl: switch to new tests, figure out why so slow
-	+ karray,linalg: cpu tests failing
-	+ reduction: gpu tests failing
-	+ conv.jl: debug unpool, add cpuconv
-
-2017-02-10  Deniz Yuret  <dyuret@ai-test.hpc.ku.edu.tr>
-
-	* DONE:
-
-	# doc warnings about missing broadcast, reduction, restricted cat, indexing, no bool array etc.
-	# figure out rtfd doc setup or forwarding.
-	# figure out no KnetArray in cpu problem
-	# KnetArray does not work on cpu-only (should it? no. operators overloaded assuming gpu)
+	# mnist2d: implement/test sparse arrays
+	# for general arrays: broadcast, get/setindex, h/v/cat.
+	# implement better unit testing.
+	## autograd.jl: add enough primitives to knetarray to pass the autograd tests converted to knetarrays.
 	# add back cpu convolution
-	# gputests.jl and cputests.jl are broken.
-	# resolve issues
-
-2017-02-09  Deniz Yuret  <dyuret@ku.edu.tr>
-
-	* DONE:
-
-	# missing docs for distributions
-	# the update methods not documented yet.
-	# 0.8.1: tag new version for the paper when all is done.
 	# add transpose to KnetArray.
-	# source links? (especially for examples)
-	# docs todo: warn against overwriting arrays.
-	# use original docstrings for examples readme, put examples readme in docs.
-
-
-2017-02-08  Deniz Yuret  <dyuret@ku.edu.tr>
-
-	* Documenter.jl: (TODO) Julia documentation moved back to MD
-	supported by Documenter.jl.  Supports latex, doctest, xrefs,
-	search.  Hosted on github pages built throgh Travis (no need for
-	Python).  PDF output?  PDF:
-	https://juliadocs.github.io/Documenter.jl/stable/lib/internals/writers.html
-	Automatic conversion from rst? Try Pandoc.  Use markdown_github as
-	output.
-	Using sips command on osx to resize images.
-
-	- doctest, does it accept ... ?
-	- how do we generate docs from docstrings? ```@docs
-	- can use function f end to document a zero method function
-	- you can document fields of a type.
-	- how do you refer to julia function docs from knet docstrings?
-	- @doc "..." foo is used when foo is defined by generated code
-	- can we default link text to link content?
-	- $(EXPORTS) used in module doc to list exported symbols.
-	- using ```@contents, @index, @docs
-	- where are the source links?
-
-2017-02-07  Deniz Yuret  <dyuret@ai-test.hpc.ku.edu.tr>
-
-	* src/Makefile (CFLAGS): code refactoring:
-
-	Function lists (cuda??.jl) and cuda code generators
-	(cuda??_gen.jl) do not go well together.  The reason is the same
-	function list (e.g. binary array ops) are used by more than one
-	type of cuda kernel (same size vs broadcasting kernels).  It makes
-	more sense to collect function lists in semantically named files
-	(unary, broadcasting, reduce etc.).
-
-	cuda1: abs2,abs,acos,... => unary
-	cuda10: add,sub,mul,...  => broadcast
-	cuda11: add,sub,mul,...
-	cuda12: add,sub,mul,...
-	cuda20: sum,prod,...     => reduction
-	cuda21: sum,prod,...
-
+	# 0.7: rename the 73 functions, cpu tests (add conv), v0.5 compat.
+	# 0.8.1: tag new version for the paper when all is done.
+	# gputests.jl and cputests.jl are broken.
+	# find out why benchmarks are slower on julia5/6.
+	# resolve issues
+	# check old todo list
+	# deepcopy does not work for KnetArray
+	# the update methods not documented yet.
 
 2016-10-24  dyuret  <dyuret@ku.edu.tr>
 
